--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,35 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: 
+  flutter_native_splash: 
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/app_icon.png
+    - assets/images/splash_logo.png
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Thin.ttf
+        - asset: assets/fonts/Poppins-Regular.ttf
+        - asset: assets/fonts/Poppins-Bold.ttf
+          weight: 700
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/app_icon.png"
+
+flutter_native_splash:
+  color: "#ffffff" # Background color for the splash screen
+  image: assets/images/splash_logo.png # Path to your splash screen logo
+  android: true
+  ios: true
