--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ flutter:
     - assets/images/app_icon.png
     - assets/images/splash_logo.png
     - assets/images/default_poster.jpg
+    - assets/images/error.png
   fonts:
     - family: Poppins
       fonts:
