--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   provider:
   shared_preferences:
   path_provider:
+  flutter_dotenv:
   http:
   
 
@@ -32,6 +33,7 @@ flutter:
     - assets/images/splash_logo.png
     - assets/images/default_poster.jpg
     - assets/images/error.png
+    - .env
   fonts:
     - family: Poppins
       fonts:
